--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,9 @@ tests_require =
 [options.entry_points]
 console_scripts =
     ordered_map = ordered_map.cli:main
+
+[flake8]
+per-file-ignores =
+    docs/conf.py: E402
+    ordered_map/__init__.py: F401
+    ordered_map/ordered_map.py: E252
