--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ordered-map
-version = 0.0.2
-description = Ordered map parser and writer..
+version = 1.0.0
+description = Ordered map parser and writer.
 long_description = file: README.rst
 author = Jeroen F.J. Laros
 author_email = jlaros@fixedpoint.nl
